@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-10-25T00:49:05Z",
-  "count_outdated" : 208,
-  "uniques_outdated" : 179,
+  "timestamp" : "2023-10-25T08:14:10Z",
+  "count_outdated" : 209,
+  "uniques_outdated" : 180,
   "count" : 215,
   "uniques" : 186,
   "clones" : [
-    {
-      "timestamp": "2023-10-11T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-10-13T00:00:00Z",
       "count": 1,
